fix scrollbar height

--- a/src/main/customScroll/customScroll.scss
+++ b/src/main/customScroll/customScroll.scss
@@ -1,7 +1,3 @@
-::-webkit-scrollbar {
-  width:0;
-}
-
 .custom-scroll {
   .outer-container {
     overflow: hidden;
